created toggle-able hamburger menu

--- a/index.html
+++ b/index.html
@@ -6,35 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/menu.css">
-
     <title>Hamburger Menu </title>
 </head>
 
 <body>
-    <div class="menu-wrap">
+    <div class="menu-wrap" >
         <input type="checkbox" class="toggler">
-        <div class="hambur">
-            <div class="menu"></div>
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
             <div>
                 <div>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
+                    <ul>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
                 </div>
             </div>
-
         </div>
-
     </div>
-    <header class="showcase">
-        <div class="container showcase-inner">
-            <h1>welcome</h1>
-            <p>Lorem Ipsum blad some yad yada
-                <a href="" class="btn">ReAd MorE</a>
+
+    <header class="landing">
+        <div class="container landing-inner">
+            <h1>Map Displayer</h1>
+            <p>Text
             </p>
         </div>
 
