finished skeleton hamburger

--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 </head>
 
 <body>
-    <div class="menu-wrap" >
+    <header class="landing">
+        <div class="container landing-inner">
+            <h1>City Map</h1>
+            <p>Explore information from cities all over the world!
+            </p>
+        </div>
+    </header>
+
+    <div class="menu-wrap">
         <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
+        <div class="hamburger">
+            <div></div>
+        </div>
         <div class="menu">
             <div>
                 <div>
                     <ul>
-                        <li><a href=""></a></li>
+                        <li class="washington"><a href="Washington DC"></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
@@ -29,14 +39,7 @@
         </div>
     </div>
 
-    <header class="landing">
-        <div class="container landing-inner">
-            <h1>Map Displayer</h1>
-            <p>Text
-            </p>
-        </div>
 
-    </header>
     <script src="index.js"></script>
 </body>
 
