--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <div>
                 <div>
                     <ul>
-                        <li class="washington"><a href="Washington DC"></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li class="washington">Washington<a href="Washington DC"></a></li>
+                        <li><a href="">New York</a></li>
+                        <li><a href="">Tokyo</a></li>
+                        <li><a href="">Mexico City</a></li>
+                        <!-- <li><a href=""></a></li>
+                        <li><a href=""></a></li> -->
                     </ul>
                 </div>
             </div>
