created multiple maps fixed css issues

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="landing">
         <div class="container landing-inner">
             <h1>City Map</h1>
-            <p>Quick and easily access map information from cities all over the world!
+            <p> A quick and easy way to access information from cities located all over the world!
             </p>
         </div>
     </header>
