--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <h1>City Map</h1>
             <p> A quick and easy way to access information from cities located all over the world!
             </p>
+            <footer class="footer">
+                <ul>
+                    <li><a href=""></a>About</li>
+                    <li><a href=""></a>Help</li>
+                    <li><a href=""></a>Copywrite</li>
+                </ul>
+            </footer>
         </div>
     </header>
 
@@ -37,7 +44,8 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+
+   <script src="index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsURDi5hsUvQ8QUvGPb6Qmun1JoEeM41o&callback=initMap"
         async defer></script>
 </body>
